<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/facebook_logo"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etEmail"
        android:layout_below="@+id/ivLogo"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etPassword"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:textAllCaps="true"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryLight"
        android:foreground="?attr/selectableItemBackground"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/gray"
        />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/btnForgotPassword"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/gray"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/btnSignUp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/gray"

        />


</RelativeLayout>
